--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="clearfix">
                 <!-- Scheda prodotto -->
                 <div class="prodotti">
-                    <img src="css/img/1.webp" alt="Primo prodotto">
-                    <div class="hoover1">
-                        <img src="css/img/1b.webp" alt="Primo prodotto bis">
+                    <div class="hover">
+                        <img class="primaimg" src="css/img/1.webp" alt="Primo prodotto">
+                        <img class="secondaimg" src="css/img/1b.webp" alt="Primo prodotto bis">
                     </div>
                     <span class="cuore">&hearts;</span>
                     <p class="marca">Levi's</p>
@@ -27,7 +27,10 @@
                 </div>
                  <!-- Scheda prodotto -->
                 <div class="prodotti">
-                    <img src="css/img/2.webp" alt="Secondo prodotto">
+                    <div class="hover">
+                        <img class="primaimg" src="css/img/2.webp" alt="Secondo prodotto">
+                        <img class="secondaimg" src="css/img/2b.webp" alt="Secondo prodotto bis">
+                    </div>
                     <span class="cuore">&hearts;</span>
                     <p class="marca">Guess</p>
                     <h4>ROSES TEE</h4>
@@ -36,7 +39,10 @@
                 </div>
                 <!-- Scheda prodotto -->
                 <div class="prodotti">
-                    <img src="css/img/3.webp" alt="Terzo prodotto">
+                    <div class="hover">
+                        <img class="primaimg" src="css/img/3.webp" alt="Terzo prodotto">
+                        <img class="secondaimg" src="css/img/3b.webp" alt="Terzo prodotto bis">
+                    </div>
                     <span class="cuore">&hearts;</span>
                     <p class="marca">Come zucchero filato</p>
                     <h4>VOGLIA DI COLORI PASTELL0</h4>
@@ -48,7 +54,10 @@
             <div class="clearfix">
                 <!-- Scheda prodotto -->
                 <div class="prodotti">
-                    <img src="css/img/4.webp" alt="Quarto prodotto">
+                    <div class="hover">
+                        <img class="primaimg" src="css/img/4.webp" alt="Quarto prodotto">
+                        <img class="secondaimg" src="css/img/4b.webp" alt="Quarto prodotto bis">
+                    </div>
                     <span class="cuore">&hearts;</span>
                     <p class="marca">Levi's</p>
                     <h4>RELAXED FIT TEE UNISEX</h4>
@@ -58,7 +67,10 @@
                 </div>
                  <!-- Scheda prodotto -->
                 <div class="prodotti">
-                    <img src="css/img/5.webp" alt="Quinto prodotto">
+                    <div class="hover">
+                        <img class="primaimg" src="css/img/5.webp" alt="Quinto prodotto">
+                        <img class="secondaimg" src="css/img/5b.webp" alt="Quinto prodotto bis">
+                    </div>
                     <span class="cuore">&hearts;</span>
                     <p class="marca">Maya delux</p>
                     <h4>STRIPE BODICE</h4>
@@ -66,7 +78,10 @@
                 </div>
                 <!-- Scheda prodotto -->
                 <div class="prodotti">
-                    <img src="css/img/6.webp" alt="Sesto prodotto">
+                    <div class="hover">
+                        <img class="primaimg" src="css/img/6.webp" alt="Sesto prodotto">
+                        <img class="secondaimg" src="css/img/6b.webp" alt="Sesto prodotto bis">
+                    </div>
                     <span class="cuore">&hearts;</span>
                     <p class="marca">Esprit</p>
                     <h4>MAGLIONE - BLACK </h4>
