--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                         <img class="secondaimg" src="css/img/1b.webp" alt="Primo prodotto bis">
                     </div>
                     <span class="cuore">&hearts;</span>
-                    <p class="marca">Levi's</p>
-                    <h4>RELAXED FIT TEE UNISEX</h4>
-                    <p class="prezzo-scontato">14,99 &euro; <span class="prezzo">29,99 &euro;</span></p>
-                    <div class="discount">-50%</div>
-                    <div class="sostenibilita">Sostenibilita</div>
+                    <div class="descrizione">
+                        <p class="marca">Levi's</p>
+                        <h4>RELAXED FIT TEE UNISEX</h4>
+                        <p class="prezzo-scontato">14,99 &euro; <span class="prezzo">29,99 &euro;</span></p>
+                        <div class="discount">-50%</div>
+                        <div class="sostenibilita">Sostenibilita</div> 
+                    </div>
                 </div>
                  <!-- Scheda prodotto -->
                 <div class="prodotti">
@@ -32,10 +34,13 @@
                         <img class="secondaimg" src="css/img/2b.webp" alt="Secondo prodotto bis">
                     </div>
                     <span class="cuore">&hearts;</span>
-                    <p class="marca">Guess</p>
-                    <h4>ROSES TEE</h4>
-                    <p class="prezzo-scontato">20,99 &euro; <span class="prezzo">29,99 &euro;</span></p>
-                    <div class="discount">-30%</div>
+                    <div class="descrizione">
+                        <p class="marca">Guess</p>
+                        <h4>ROSES TEE</h4>
+                        <p class="prezzo-scontato">20,99 &euro; <span class="prezzo">29,99 &euro;</span></p>
+                        <div class="discount">-30%</div>
+                    </div>
+                    
                 </div>
                 <!-- Scheda prodotto -->
                 <div class="prodotti">
@@ -44,10 +49,12 @@
                         <img class="secondaimg" src="css/img/3b.webp" alt="Terzo prodotto bis">
                     </div>
                     <span class="cuore">&hearts;</span>
-                    <p class="marca">Come zucchero filato</p>
-                    <h4>VOGLIA DI COLORI PASTELL0</h4>
-                    <p class="prezzo-scontato">129,99 &euro;</p>
-                    <div class="discount">-30%</div>
+                    <div class="descrizione">
+                        <p class="marca">Come zucchero filato</p>
+                        <h4>VOGLIA DI COLORI PASTELL0</h4>
+                        <p class="prezzo-scontato">129,99 &euro;</p>
+                        <div class="discount">-30%</div>
+                    </div>
                 </div>
             </div>
             <!-- Blocco prodotti -->
@@ -59,11 +66,13 @@
                         <img class="secondaimg" src="css/img/4b.webp" alt="Quarto prodotto bis">
                     </div>
                     <span class="cuore">&hearts;</span>
-                    <p class="marca">Levi's</p>
-                    <h4>RELAXED FIT TEE UNISEX</h4>
-                    <p class="prezzo-scontato">14,99 &euro; <span class="prezzo">29,99 &euro;</span></p>
-                    <div class="discount">-50%</div>
-                    <div class="sostenibilita">Sostenibilita</div>
+                    <div class="descrizione">
+                        <p class="marca">Levi's</p>
+                        <h4>RELAXED FIT TEE UNISEX</h4>
+                        <p class="prezzo-scontato">14,99 &euro; <span class="prezzo">29,99 &euro;</span></p>
+                        <div class="discount">-50%</div>
+                        <div class="sostenibilita">Sostenibilita</div>
+                    </div>
                 </div>
                  <!-- Scheda prodotto -->
                 <div class="prodotti">
@@ -72,9 +81,11 @@
                         <img class="secondaimg" src="css/img/5b.webp" alt="Quinto prodotto bis">
                     </div>
                     <span class="cuore">&hearts;</span>
-                    <p class="marca">Maya delux</p>
-                    <h4>STRIPE BODICE</h4>
-                    <p class="prezzo-scontato">99,99 &euro;</p>
+                    <div class="descrizione">
+                        <p class="marca">Maya delux</p>
+                        <h4>STRIPE BODICE</h4>
+                        <p class="prezzo-scontato">99,99 &euro;</p>
+                    </div>
                 </div>
                 <!-- Scheda prodotto -->
                 <div class="prodotti">
@@ -83,10 +94,12 @@
                         <img class="secondaimg" src="css/img/6b.webp" alt="Sesto prodotto bis">
                     </div>
                     <span class="cuore">&hearts;</span>
-                    <p class="marca">Esprit</p>
-                    <h4>MAGLIONE - BLACK </h4>
-                    <p class="prezzo-scontato">29,99 &euro;</p>
-                    <div class="sostenibilita2">Sostenibilita</div>
+                    <div class="descrizione">
+                        <p class="marca">Esprit</p>
+                        <h4>MAGLIONE - BLACK </h4>
+                        <p class="prezzo-scontato">29,99 &euro;</p>
+                        <div class="sostenibilita2">Sostenibilita</div>
+                    </div>
                 </div>
             </div>
 
